- Criação da tabela LimiteCliente, APICurso consegue ler os dados do banco, retornar um Limite de crédito específico e decrementar o limite de crédito.

--- a/APICliente/appsettings.json
+++ b/APICliente/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BDServico;Uid=root;Pwd='';Sslmode=none"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
